[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Control.gd" type="Script" id=1]
[ext_resource path="res://Assets/Pictures/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sounds/pop.mp3" type="AudioStream" id=3]

[node name="Audio" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 553, 457.5 )
scale = Vector2( 7.65469, 11.6847 )
texture = ExtResource( 2 )

[node name="Audio" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 603.0
margin_top = 145.0
margin_right = 691.0
margin_bottom = 233.0
rect_scale = Vector2( 2, 2 )
text = "Audio"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.414
anchor_top = 0.673
anchor_right = 0.574
anchor_bottom = 0.673
margin_left = 624.44
margin_top = 327.08
margin_right = 759.04
margin_bottom = 395.08

[node name="Music" type="Button" parent="VBoxContainer"]
margin_right = 141.0
margin_bottom = 20.0
text = "Music"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 141.0
margin_bottom = 40.0
min_value = 0.001
max_value = 1.0
step = 0.05
value = 1.0

[node name="Effects" type="Button" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 141.0
margin_bottom = 64.0
text = "Effects"

[node name="EffectsSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 141.0
margin_bottom = 84.0
min_value = 0.001
max_value = 1.0
step = 0.05
value = 1.0

[node name="Voltar" type="Button" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 141.0
margin_bottom = 108.0
text = "Voltar"

[node name="popmusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"

[node name="popeffects" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Effects"

[connection signal="pressed" from="VBoxContainer/Music" to="." method="_on_Music_pressed"]
[connection signal="changed" from="VBoxContainer/MusicSlider" to="." method="_on_MusicSlider_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Effects" to="." method="_on_Effects_pressed"]
[connection signal="changed" from="VBoxContainer/EffectsSlider" to="." method="_on_EffectsSlider_changed"]
[connection signal="value_changed" from="VBoxContainer/EffectsSlider" to="." method="_on_EffectsSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Voltar" to="." method="_on_Voltar_pressed"]
